# libspimage

./: .gitignore  .travis.yml  AllTests.c  AllTests.h  CMakeLists.txt  CTestConfig.cmake  ContainerTests.c  ImageTests.c  LinearTests.c  Makefile  ProjTests.c  README.md  doxygen.conf  fft.c  fft.h  hashtable_private.h  image.h  image_noise.c  image_sphere.c  image_util.c  image_util.h  interpolation_kernels.c  linear_alg.c  list.c  mem_util.c  sperror.c  spimage.h  spimage.pro  time_util.c
.github/workflows/: test.yml
OSX/: Makefile
Win32/: Makefile.win  libspimage.dev
cmake/Modules/: FindNumpy.cmake  FindSpImage.cmake
cmake/Modules/cuda/: FindCUDA.cmake  run_nvcc.cmake
doc/: EMPTY  spimage.css  spimage_footer.html  spimage_header.html
examples/: simple.ipynb
include/: CMakeLists.txt  config.h.in  spimage.h
include/spimage/: colormap.h  cuda_util.h  fft.h  find_center.h  hashtable.h  image.h  image_filter.h  image_filter_cuda.h  image_io.h  image_noise.h  image_sphere.h  image_util.h  interpolation_kernels.h  linear_alg.h  list.h  map.h  mem_util.h  phasing.h  prtf.h  statistics.h  support_update.h  time_util.h
scripts/: debian_package.py  dll2lib.py  msvc_build.py  msvc_build_32.py  msvc_build_64.py  nightly_build.py  package_sources.pl
spimage/: fft.h  hashtable.h  image.h  image_sphere.h  image_util.h  interpolation_kernels.h  linear_alg.h  list.h  map.h  mem_util.h  sperror.h  time_util.h
src/: CMakeLists.txt  _spimage_conventions.py  _spimage_cxi.py  _spimage_find_center.py  _spimage_io.py  _spimage_log.py  _spimage_material.py  _spimage_misc.py  _spimage_patterson.py  _spimage_pixelmask.py  _spimage_prtf.py  _spimage_prtf2.py  _spimage_qmap.py  _spimage_reconstructor.py  _spimage_resample.py  _spimage_sphere_model.py  _spimage_spheroid_model.py  _spimage_utils.py  colormap.c  cuda_util.c  fft.c  fft.cu  find_center.c  gaussianinv.c  hashtable.c  image_filter.c  image_filter_cuda.cu  image_io.c  image_noise.c  image_sphere.c  image_util.c  interpolation_kernels.c  linear_alg.c  list.c  phasing.c  phasing.cu  phasing_kernels.cu  prtf.c  sperror.c  spimage.i  (+5 more)
src/leastsqbound-scipy/: leastsqbound.py
tests/: AllTests.c  AllTests.h  CMakeLists.txt  ImageTests.c  LinearTests.c  PhasingTests.c  ProjTests.c  PrtfTests.c
x86_64/: Makefile
