cmake_minimum_required(VERSION 2.6)

PROJECT (spimage)

INCLUDE(CTest)
ENABLE_TESTING()
IF(BUILD_TESTING)
  SET(BUILDNAME "${BUILDNAME}" CACHE STRING "Name of build on the dashboard")
  MARK_AS_ADVANCED(BUILDNAME)
ENDIF(BUILD_TESTING)


SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

# Make sure that while building this library the include files are not 
# built with export prefix
ADD_DEFINITIONS(-D SPIMAGE_NO_DLL)

IF(WIN32)
#	ADD_DEFINITIONS(-D_HDF5USEDLL_)
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
ENDIF(WIN32)

IF(CMAKE_COMPILER_IS_GNUCC)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c99")
ENDIF(CMAKE_COMPILER_IS_GNUCC)

	

SET(BUILD_STATIC_LIB CACHE BOOL "If ON output static library. Otherwise output shared libraries.")
SET(INCLUDE_DEPENDENCIES CACHE BOOL "[EXPERIMENTAL] If ON embed dependent libraries.")
SET(DMALLOC_USE OFF CACHE BOOL "If ON link to dmalloc library if possible.")
SET(DOUBLE_PRECISION OFF CACHE BOOL "If ON use double precision. Otherwise use single precision")
SET(SP_MEM_DEBUG OFF CACHE BOOL "If ON use memory debugging code.")
SET(USE_CUDA ON CACHE BOOL "If ON try to use CUDA.")
SET(PYTHON_WRAPPERS ON CACHE BOOL "If ON try to build python wrappers.")

find_package(TIFF REQUIRED)
find_package(FFTW3 REQUIRED)
find_package(PNG REQUIRED)
find_package(HDF5 REQUIRED)
find_package(JPEG REQUIRED)
find_package(ZLIB REQUIRED)
find_package(MATH REQUIRED)
find_package(GSL REQUIRED)
if(PYTHON_WRAPPERS)
  find_package(PythonLibs)
  find_package(PythonInterp)
endif(PYTHON_WRAPPERS)
find_package(Numpy)
find_package(SWIG)
IF(USE_CUDA)
  IF(CMAKE_VERSION)
    # CMAKE VERSION was first defined in 2.6.3. Sorry for the hack
    IF(CMAKE_VERSION VERSION_LESS 2.8)
      SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/cuda")
    ELSE(CMAKE_VERSION VERSION_LESS 2.8)
      MESSAGE(STATUS "Using builtin CUDA package")
    ENDIF(CMAKE_VERSION VERSION_LESS 2.8)
    find_package(CUDA QUIET)
  ELSE(CMAKE_VERSION)
    message(STATUS "cmake 2.6.3 or higher required to use CUDA")
  ENDIF(CMAKE_VERSION)

  IF(CUDA_FOUND)
    mark_as_advanced(CUDA_SDK_ROOT_DIR)
    mark_as_advanced(CUDA_BUILD_EMULATION)
    mark_as_advanced(CUDA_BUILD_CUBIN)
    mark_as_advanced(CUDA_VERBOSE_BUILD)
    #set(CUDA_VERBOSE_BUILD ON)
    ADD_DEFINITIONS(-D_USE_CUDA)
    message(STATUS "CUDA found. Using CUDA.")
  ELSE(CUDA_FOUND)
    message(STATUS "CUDA not found. Not using CUDA.")
  ENDIF(CUDA_FOUND)
ELSE(USE_CUDA)
  UNSET(CUDA_FOUND)
ENDIF(USE_CUDA)

#   Offer the user the choice of overriding the installation directories

get_property(LIB64 GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS)

if (${LIB64} STREQUAL "TRUE")
    set(LIBRARY_SUFFIX  64)
else()
    set(LIBRARY_SUFFIX  "")
endif()



IF(DOUBLE_PRECISION)
	ADD_DEFINITIONS(-D_SP_DOUBLE_PRECISION)
ELSE(DOUBLE_PRECISION)	
	ADD_DEFINITIONS(-D_SP_SINGLE_PRECISION)
ENDIF(DOUBLE_PRECISION)

IF(DEBUG_MEM)
	ADD_DEFINITIONS(-D_SP_DEBUG_MEM)
ENDIF(DEBUG_MEM)
	

IF(DMALLOC_USE)
		    FIND_LIBRARY (DMALLOC_LIBRARY dmalloc /usr/lib /sw/lib)
		    FIND_PATH (DMALLOC_INCLUDE_DIR dmalloc.h PATHS /usr/include /sw/include)	
		    IF(DMALLOC_LIBRARY)
		    		    ADD_DEFINITIONS(-D_USE_DMALLOC)
				    SET(LINK_TO_DMALLOC 1)
		    ENDIF(DMALLOC_LIBRARY)
ENDIF(DMALLOC_USE)



INCLUDE_DIRECTORIES(${FFTW3_INCLUDE_DIR} ${PNG_INCLUDE_DIR} ${TIFF_INCLUDE_DIR} ${HDF5_INCLUDE_DIR} ${MATH_INCLUDE_DIR} ${ZLIB_INCLUDE_DIR} ${JPEG_INCLUDE_DIR} ${GSL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(BEFORE "${CMAKE_SOURCE_DIR}/include/")
IF(CUDA_FOUND)
INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
ENDIF(CUDA_FOUND)

LIST(APPEND TESTS_LIBRARIES  ${TIFF_LIBRARIES} ${FFTW3_LIBRARIES} ${PNG_LIBRARIES} ${HDF5_LIBRARIES} ${MATH_LIBRARIES} ${ZLIB_LIBRARIES} ${JPEG_LIBRARIES} ${GSL_LIBRARIES})
LIST(APPEND SPIMAGE_LIBRARIES  ${TIFF_LIBRARIES} ${FFTW3_LIBRARIES} ${PNG_LIBRARIES} ${HDF5_LIBRARIES} ${MATH_LIBRARIES} ${ZLIB_LIBRARIES} ${JPEG_LIBRARIES})
	    
IF(LINK_TO_DMALLOC)
LIST(APPEND SPIMAGE_LIBRARIES ${DMALLOC_LIBRARY})
LIST(APPEND TESTS_LIBRARIES ${DMALLOC_LIBRARY})
ENDIF(LINK_TO_DMALLOC)

LIST(APPEND SPIMAGE_SRC "${CMAKE_SOURCE_DIR}/src/image_util.c" "${CMAKE_SOURCE_DIR}/src/fft.c" "${CMAKE_SOURCE_DIR}/src/linear_alg.c")
LIST(APPEND SPIMAGE_SRC "${CMAKE_SOURCE_DIR}/src/mem_util.c" "${CMAKE_SOURCE_DIR}/src/image_sphere.c" "${CMAKE_SOURCE_DIR}/src/sperror.c")
LIST(APPEND SPIMAGE_SRC "${CMAKE_SOURCE_DIR}/src/gaussianinv.c" "${CMAKE_SOURCE_DIR}/src/image_noise.c" "${CMAKE_SOURCE_DIR}/src/hashtable.c")
LIST(APPEND SPIMAGE_SRC "${CMAKE_SOURCE_DIR}/src/interpolation_kernels.c" "${CMAKE_SOURCE_DIR}/src/time_util.c")
LIST(APPEND SPIMAGE_SRC "${CMAKE_SOURCE_DIR}/src/list.c" "${CMAKE_SOURCE_DIR}/src/prtf.c" "${CMAKE_SOURCE_DIR}/src/phasing.c")
LIST(APPEND SPIMAGE_SRC "${CMAKE_SOURCE_DIR}/src/colormap.c" "${CMAKE_SOURCE_DIR}/src/cuda_util.c" "${CMAKE_SOURCE_DIR}/src/support_update.c")
LIST(APPEND SPIMAGE_SRC "${CMAKE_SOURCE_DIR}/src/image_io.c" "${CMAKE_SOURCE_DIR}/src/image_filter.c")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(tests)
