INSTALL(FILES spimage/statistics.h spimage/image_noise.h spimage/fft.h spimage/cuda_util.h spimage/support_update.h spimage/image_util.h spimage/image.h spimage/linear_alg.h spimage/mem_util.h spimage/image_sphere.h spimage/sperror.h spimage/hashtable.h spimage/interpolation_kernels.h spimage/time_util.h spimage/list.h spimage/map.h spimage/prtf.h spimage/phasing.h spimage/colormap.h spimage/image_filter_cuda.h spimage/image_io.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include/spimage)
INSTALL(FILES spimage.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include/)
